main: ForgetPassword + RestPassword Method and View  (Complate)
 Forget Password + RestPassowrd Create + Email Service Create + Startup Connected + Mail.Kit and Mime.Kit Package Download

--- a/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
+++ b/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Castle.Windsor" Version="5.1.1" />
+    <PackageReference Include="MailKit" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
@@ -19,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="MimeKit" Version="3.1.1" />
     <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
   </ItemGroup>
 
