--- a/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
+++ b/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20220316230024_CreateTableComment.cs" />
+    <Compile Remove="Migrations\20220316230024_CreateTableComment.Designer.cs" />
+    <Compile Remove="Migrations\20220316232411_CreateTableMessengeUser.cs" />
+    <Compile Remove="Migrations\20220316232411_CreateTableMessengeUser.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Castle.Windsor" Version="5.1.1" />
     <PackageReference Include="MailKit" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
