main: Blog Creat Delete Complate
Blog Creat

--- a/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
+++ b/Portfolio_Back_End/ParfolioWebSiteView/ParfolioWebSiteView.csproj
@@ -44,6 +44,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\UserAdmin\Data\" />
     <Folder Include="Areas\UserAdmin\Models\" />
+    <Folder Include="wwwroot\img\Blog\" />
   </ItemGroup>
 
 </Project>
