main:Version 1.2.0 Pagination Add
Pagination List add + Pagination Model Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/appsettings.json
+++ b/Portfolio_Back_End/ParfolioWebSiteView/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Defaultdb": "Data Source=LAPTOP-071EH2HU\\SQLEXPRESS;Initial Catalog=PortfolioUnversal;Integrated Security=SSPI;MultipleActiveResultSets=True",
+    "Defaultdb": "Data Source=LAPTOP-071EH2HU\\SQLEXPRESS;Initial Catalog=PortfolioUnversal;Integrated Security=SSPI;MultipleActiveResultSets=True"
   },
   "EmailSetting": {
     "Host": "smtp.gmail.com",
